--- a/templates/sssd_sysconfig.j2
+++ b/templates/sssd_sysconfig.j2
@@ -1,7 +1,8 @@
 {{ '## sssd' }}
 {{ '# ' + ansible_managed }}
-{{ '# ' + 'Do not edit manually' }}
+{{ '# Do not edit manually' }}
 
-{% if vars['sssd_logger'] in ['stderr', 'files', 'journald'] %}
-{{ 'DEBUG_LOGGER=--logger=' + vars['sssd_logger'] }}
+{% if lookup('ansible.builtin.vars', 'sssd_logger', default='') in
+  ['stderr', 'files', 'journald'] %}
+{{ 'DEBUG_LOGGER=--logger=' + lookup('ansible.builtin.vars', 'sssd_logger') }}
 {% endif %}
