--- a/templates/sssd_pac.j2
+++ b/templates/sssd_pac.j2
@@ -1,29 +1,32 @@
-{% for sp in s.pac %}
-{% if loop.first %}
+{% for sp in s['pac'] %}
+{% if loop['first'] %}
 {{ '[pac]' }}
 {% endif %}
-{% if sp.debug_level is defined and sp.debug_level != '' %}
-{{ 'debug_level = ' ~ sp.debug_level }}
+{% if sp['debug_level'] is defined and sp['debug_level']
+  not in ['', [], '[]', None] %}
+{{ 'debug_level = ' ~ sp['debug_level'] }}
 {% endif %}
-{% if sp.debug_timestamps is defined and
-      sp.debug_timestamps in ['true', 'false'] %}
-{{ 'debug_timestamps = ' + sp.debug_timestamps }}
+{% if sp['debug_timestamps'] is defined and sp['debug_timestamps'] in
+  ['true', 'false'] %}
+{{ 'debug_timestamps = ' + sp['debug_timestamps'] }}
 {% endif %}
-{% if sp.debug_microseconds is defined and
-      sp.debug_microseconds in ['true', 'false'] %}
-{{ 'debug_microseconds = ' + sp.debug_microseconds }}
+{% if sp['debug_microseconds'] is defined and sp['debug_microseconds'] in
+  ['true', 'false'] %}
+{{ 'debug_microseconds = ' + sp['debug_microseconds'] }}
 {% endif %}
-{% if sp.timeout is defined and sp.timeout != '' %}
-{{ 'timeout = ' ~ sp.timeout }}
+{% if sp['timeout'] is defined and sp['timeout'] not in ['', [], '[]', None] %}
+{{ 'timeout = ' ~ sp['timeout'] }}
 {% endif %}
-{% if sp.allowed_uids is defined and sp.allowed_uids != '' %}
-{% if sp.allowed_uids is string %}
-{{ 'allowed_uids = ' ~ sp.allowed_uids }}
-{% elif sp.allowed_uids is sequence %}
-{{ 'allowed_uids = ' ~ sp.allowed_uids | join(', ') }}
+{% if sp['allowed_uids'] is defined and sp['allowed_uids']
+  not in ['', [], '[]', None] %}
+{% if sp['allowed_uids'] is string %}
+{{ 'allowed_uids = ' ~ sp['allowed_uids'] }}
+{% elif sp['allowed_uids'] is sequence %}
+{{ 'allowed_uids = ' ~ (sp.allowed_uids | join(', ')) }}
 {% endif %}
 {% endif %}
-{% if sp.pac_lifetime is defined and sp.pac_lifetime != '' %}
-{{ 'pac_lifetime = ' ~ sp.pac_lifetime }}
+{% if sp['pac_lifetime'] is defined and sp['pac_lifetime']
+  not in ['', [], '[]', None] %}
+{{ 'pac_lifetime = ' ~ sp['pac_lifetime'] }}
 {% endif %}
 {% endfor %}
